# sister-salon-reservation-app

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: build.yml
docs/: analysis-report.md  index.html  privacy.html  spec-new-customer-on-reservation.md  terms.html
docs/assets/images/: .gitkeep
docs/progress/: changelog.md
docs/references/: api-mapping.md  git-workflow.md
docs/screenshots/: README.md
docs/specs/: 00-overview.md  01-project-setup.md  02-database.md  03-core-features.md  04-responsive-ui.md  05-statistics.md  06-export-backup.md  07-app-lock.md  08-build-deploy.md  09-customer-management.md  10-ux-navigation.md  11-ios-modal-ux.md
scripts/: bump-version.sh  capture-screenshots.sh  generate-icons.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.ios.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  business_hours.rs  customers.rs  designers.rs  export.rs  mod.rs  reservations.rs  security.rs  statistics.rs  utils.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/services/: auth.rs  backup.rs  cloudkit.rs  excel.rs  mod.rs
src/contexts/: DisplaySettingsContext.tsx  ModalContext.tsx  UnsavedChangesContext.tsx
src/hooks/: useAppLock.ts  useDeviceType.ts  useOnboarding.ts  useResponsive.ts  useSwipeBack.ts
src/lib/: tauri.ts
src/types/: index.ts
(+36 files in other folders)
