[package]
name = "sisters-salon-reservation-app"
version = "0.1.0"
description = "Sisters Salon Reservation App"
authors = ["you"]
edition = "2021"

[lib]
name = "sisters_salon_reservation_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Excel Export
rust_xlsxwriter = "0.79"

# Security
keyring = "3"
bcrypt = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "ios")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Security_Credentials_UI"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
